package Message; 
message EventSync							//同步游戏事件
{ 
    optional int32	evid			= 1;	//事件ID
    optional int64  pid 			= 2;  //角色ID
    optional int64  param1		= 3;  //参数
    optional int64  param2		= 4;  //参数
    optional int64  param3		= 5;  //参数
    optional int64  param4		= 6;  //参数
    optional int64  param5		= 7;  //参数
    optional int64  param6		= 8;  //参数
    optional string param7		= 9;  //参数
    optional string	stime     = 10;	//时间
    optional int64	parent		= 11;	//主角ID
} 